# store_summary_architecture-

./: DATA_COLLECTION_GUIDE.md  OVERLEAF_QUICK_START.md  PAPER_SETUP_GUIDE.md  README.md  chrom_db.py  final_report.md  pyproject.toml
market_research_db/: chroma.sqlite3
src/crew_5_rag/: crew.py  main.py
src/crew_5_rag/config/: agents.yaml  tasks.yaml
src/crew_5_rag/tools/: custom_tool.py
tests/: testapi.py
