[project]
name = "crew_5_rag"
version = "0.1.0"
description = "Crew_5_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.11.0",
]

[project.scripts]
crew_5_rag = "crew_5_rag.main:run"
run_crew = "crew_5_rag.main:run"
train = "crew_5_rag.main:train"
replay = "crew_5_rag.main:replay"
test = "crew_5_rag.main:test"
run_with_trigger = "crew_5_rag.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = [
    "lancedb==0.30.0"
]
